Add the unit testing